<?xml version="1.0"?>
<package format="2">
  <name>actkin_balancer_ros_bridge</name>
  <version>0.0.0</version>
  <description>The actkin_balancer_ros_bridge package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actkin_balancer_msgs</depend>
  <depend>roscpp</depend>

</package>
